; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_query.c_get_directories.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_query.c_get_directories.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@CURR_DIR = common dso_local global i8* null, align 8
@WIN_DIR = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @get_directories to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_directories() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @MAX_PATH, align 4
  %3 = load i8*, i8** @CURR_DIR, align 8
  %4 = call i32 @GetCurrentDirectoryA(i32 %2, i8* %3)
  %5 = load i8*, i8** @CURR_DIR, align 8
  %6 = call i32 @lstrlenA(i8* %5)
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %24

9:                                                ; preds = %0
  %10 = load i8*, i8** @CURR_DIR, align 8
  %11 = load i32, i32* %1, align 4
  %12 = sub nsw i32 %11, 1
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %10, i64 %13
  %15 = load i8, i8* %14, align 1
  %16 = sext i8 %15 to i32
  %17 = icmp eq i32 %16, 92
  br i1 %17, label %18, label %24

18:                                               ; preds = %9
  %19 = load i8*, i8** @CURR_DIR, align 8
  %20 = load i32, i32* %1, align 4
  %21 = sub nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i8, i8* %19, i64 %22
  store i8 0, i8* %23, align 1
  br label %24

24:                                               ; preds = %18, %9, %0
  %25 = load i8*, i8** @WIN_DIR, align 8
  %26 = load i32, i32* @MAX_PATH, align 4
  %27 = call i32 @GetWindowsDirectoryA(i8* %25, i32 %26)
  %28 = load i8*, i8** @WIN_DIR, align 8
  %29 = call i32 @lstrlenA(i8* %28)
  store i32 %29, i32* %1, align 4
  %30 = load i32, i32* %1, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %47

32:                                               ; preds = %24
  %33 = load i8*, i8** @WIN_DIR, align 8
  %34 = load i32, i32* %1, align 4
  %35 = sub nsw i32 %34, 1
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i8, i8* %33, i64 %36
  %38 = load i8, i8* %37, align 1
  %39 = sext i8 %38 to i32
  %40 = icmp eq i32 %39, 92
  br i1 %40, label %41, label %47

41:                                               ; preds = %32
  %42 = load i8*, i8** @WIN_DIR, align 8
  %43 = load i32, i32* %1, align 4
  %44 = sub nsw i32 %43, 1
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i8, i8* %42, i64 %45
  store i8 0, i8* %46, align 1
  br label %47

47:                                               ; preds = %41, %32, %24
  ret void
}

declare dso_local i32 @GetCurrentDirectoryA(i32, i8*) #1

declare dso_local i32 @lstrlenA(i8*) #1

declare dso_local i32 @GetWindowsDirectoryA(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
